App and tests working
